2000-05-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* INSTALL:
	    Refer to HTML renderation of ZMailer manual's install part..

	* scheduler/msgerror.c:
	    Drop leading \r from report data.  No weird looking blank
	    line in resulting report.

	* transports/smtp/smtp.c:
	    Don't diagnose TLS status unconditionally, it is annoying
	    thing to have accumulating into scheduler's log..

	* smtpserver/smtpserver.c:
	    When --with-whoson  is used at configuration, and
	    smtpserver is run without '-w' option, policy test
	    is falling on default of "yes this is always ok relay
	    source" behaviour -- which in general is wrong :-(

2000-05-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/selfaddrs.c:
	    Yet Another small surprise at Linux systems about
	    self-address extraction.  :-/

2000-04-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpcmds.c, smtpserver/smtpserver.c:
	    Fix "from_box" setting to match current treatment
	    of user input string (e.g. not stomping things
	    with '\0' chars..)
	    Synced  MaxErrorRecipients  default value with
	    documentation.

	* smtpserver/cfgread.c:
	    Documentation (proto/smtpserver.conf.in) says that
	    PARAM name is:  RcptLimitCount,  while it was recognized
	    only as  RcptLimitCnt ...  Oops.

2000-04-18  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/db.c:
	    A mistake in cache LRU chain handling caused eternal
	    loop to form sometimes.  Oops.

2000-04-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/ctlopen.c:
	    An odd corner case of error handling allowed access to
	    uninitialized elements of an array -> junk data blew up..

	* scheduler/threads.c, scheduler/update.c:
	    Trying to understand why 'deferred' diagnostics causes
	    practically immediate reissuance of a task..
	    Understanding dawns, thread rescheduling was implemented
	    in fumes, so crazy it was (but then, I don't drink nor
	    smoke...)

	* router/functions.c: