@@ -1,5 +1,11 @@
 2000-05-08  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* libc/mail.c, router/rfc822.c:
+	    Simplified message injection code a bit; especially
+	    tried to lessen the number of directory operations.
+	    (Even though comments in the source say that rename(2)
+	     isn't safe, we are using it...)
+
 	* INSTALL:
 	    Refer to HTML renderation of ZMailer manual's install part..
 
